--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
         android:layout_marginTop="10dp"
         />
     <Button
+        android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:text="Login Here"
@@ -61,6 +62,7 @@
             android:text="If You Not Register ?"
             android:textSize="22dp"/>
         <TextView
+            android:id="@+id/txt_signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Signup"
